    #464003).

  * Fix a parsing bug where "wajig changelog libgtk2.0-0" didn't work.

  * Switch to dpkg-source 3.0 (native) format

  * RBUILDDEPS: New option allowing one to determine which packages
    build-depends on a particular package. The long form command is
    "reverse-build-depends", else just use "wajig rbuilddeps pkgname".
    (Closes: #335240).

 -- Graham Williams <Graham.Williams@togaware.com>  Wed, 15 Sep 2010 17:22:16 +1000

wajig (2.0.48) unstable; urgency=low

  * Add new command ADDREPO to add a Launchpad PPA. Uses
    add-apt-repository. (Tshepang Lekhonkhobe)
  
  * Add -b (backup) option to UPGRADE command so it is easier to revert to
    a previous state if a problem arises. Uses dpkg-repack. (Tshepang
    Lekhonkhobe)
  
  * Cleanup debian meta data and add unit testing and cleanup various
    python code and improve readability and upgrade deprecated string
    module. (Tshepang Lekhonkhobe)

  * Tidy up the list of commands from the "list-commands"
    command. (Tshepang Lekhonkhobe) (Closes: #582252).

  * Show downgraded packages in 'wajig list-log'. (Tshepang Lekhonkhobe)
    (Closes: #366796).

  * Remove the unavailable gnome-tasksel from Suggested. (Tshepang
    Lekhonkhobe) (Closes: #549574).

 -- Graham Williams <gjw@nyx.togaware.com>  Tue, 24 Aug 2010 20:53:48 +1000

wajig (2.0.47) unstable; urgency=low

  * Use apt-get remove --auto-remove to implement remove-depend.  This is
    simpler than making wajig do the dependency checking, and runs much
    faster. (Closes: #579419).

 -- Graham Williams <Graham.Williams@togaware.com>  Wed, 19 May 2010 20:16:10 +1000

wajig (2.0.46) unstable; urgency=low

  * Change installr to use aptitude -r so that we get recursive install of
    recommended packages. (Closes: #477921).
  
  * Patch from Julian Klode and Dirk Eddelbuettel for new API - apply
    patches but no longer works on Ubuntu - assume works on
    Debian. (Closes: #571766).
